# socrata-backfill-datasets

./: .env.example  .gitignore  README.md  createwarehouse.py  pyproject.toml  setup.bat  setup.sh
logs/.telemetry/: id.yaml
logs/history/: runs.db
logs/history/runs/: ef3791f9-93a5-4327-959b-4c3ae1f2f2f1.db  index.db
logs/schedules/: schedules.db
logs/storage/ef3791f9-93a5-4327-959b-4c3ae1f2f2f1/compute_logs/: efpulnpc.err  gpjyrvrq.err  jjiwniun.err  kklbjqus.err  rhzgvwul.err
mta/: constants.py  datasets.py  definitions.py
mta/assets/: assets_descriptions.py  dbt_assets.py
mta/assets/ingestion/: crime_assets.py  mta_assets.py  threeoneone_assets.py
mta/assets/transformations/: duckdb_assets.py
mta/resources/: dbt_project.py  socrata_resource.py
mta/resources/io_managers/: large_socrata_polars_parquet_io_manager.py  single_file_polars_parquet_io_manager.py
mta/utils/: duckdb_wrapper.py  open_mateo_free_api.py
notebooks/: EDA.ipynb
pipeline/: constants.py  datasets.py  definitions.py
pipeline/assets/: assets_descriptions.py
pipeline/assets/ingestion/: building_assets.py  crime_assets.py  mta_assets.py  threeoneone_assets.py
pipeline/resources/: dbt_project.py  socrata_resource.py
pipeline/resources/io_managers/: large_socrata_polars_parquet_io_manager.py  medium_socrata_polars_parquet_io_manager.py
pipeline/utils/: bbl.py  duckdb_wrapper.py  socrata_api.py
scripts/: exportpathlinux.py  generate_dagsteryaml.py
